# LLMs-from-scratch

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  main.py  pyproject.toml
.github/workflows/: publish.yaml
LLMs_from_scratch/: tokenizer.py
LLMs_from_scratch/architectures/: gpt_2_model.py
LLMs_from_scratch/configs/: configs_provider.py  models.py
LLMs_from_scratch/dataloader/: dataloader.py  dataset.py  dataset_utils.py  gpt_2_dataset.py  spam_dataset.py  tokenizer.py
LLMs_from_scratch/gpt_2/: attention.py
LLMs_from_scratch/transformers/: activations.py  feed_forward.py  layer_norm.py  self_attention.py  transformer.py
LLMs_from_scratch/trasformers/: multi_headed_attention.py  self_attention.py
configs/: global.yaml
configs/dataloader/: dataloader.yaml  gpt_dataset.yaml  spam_dataset.yaml
configs/tokenizer/: tokenizer.yaml
configs/transformers/: feed_forward.yaml  gpt_2_model.yaml  layer_norm.yaml  self_attention.yaml  simple_skip_connection_network.yaml  transformer_block.yaml
configs/trasformers/: self_attention.yaml
tests/: test_configs_provider.py  test_func.py  test_multi_headed_attention.py  test_tokenizer.py
tests/datasets/: test_spam_dataset.py
utils/: configs.py  configs_provider.py  experiment_logger.py  logger.py  settings.py  settings_provider.py  singleton.py  utilities.py
