[project]
name = "LLMs-from-scratch"
version = "0.0.1"
description = "A playground project for building LLMs from scratch"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Cristian C. Spagnuolo", email = "cristian.c.spagnuolo@gmail.com" } ]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]

dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "mlflow>=3.1.1",
    "optuna>=4.4.0",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers>=4.55.2",
]


[[tool.uv.index]]
name = "default_pypy"
url = "https://pypi.org/simple/"
default = true